--- a/week04_session01_NB02_nested_data_NBA_exercises_final.ipynb
+++ b/week04_session01_NB02_nested_data_NBA_exercises_final.ipynb
@@ -36,11 +36,33 @@
         "!wget https://raw.githubusercontent.com/gt-cse-6040/skills_oh_week_04/main/nba_json.txt"
       ],
       "metadata": {
-        "id": "4NQiJF1iYa62"
+        "id": "hIBZiUyzZVls",
+        "outputId": "f72685b1-efea-46b7-f5ee-fdf892dde864",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "id": "4NQiJF1iYa62",
-      "execution_count": null,
-      "outputs": []
+      "id": "hIBZiUyzZVls",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-01-22 16:52:49--  https://raw.githubusercontent.com/gt-cse-6040/skills_oh_week_04/main/nba_json.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 8903 (8.7K) [text/plain]\n",
+            "Saving to: ‘nba_json.txt’\n",
+            "\n",
+            "\rnba_json.txt          0%[                    ]       0  --.-KB/s               \rnba_json.txt        100%[===================>]   8.69K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2023-01-22 16:52:49 (64.4 MB/s) - ‘nba_json.txt’ saved [8903/8903]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -58,13 +80,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "c813cfad",
       "metadata": {
         "scrolled": true,
-        "id": "c813cfad"
+        "id": "c813cfad",
+        "outputId": "bb2ca5d6-cb6a-4ee5-fa1b-c0f0b6eabb70",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 236
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-c2f769923bda>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# reading the data from the json file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'nba_json.txt'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'nba_json.txt'"
+          ]
+        }
+      ],
       "source": [
         "# loading the data, same as the previous NB\n",
         "# import the required package\n",
@@ -96,12 +135,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "99280f6a",
       "metadata": {
-        "id": "99280f6a"
+        "id": "99280f6a",
+        "outputId": "57f13ea4-bacf-4acf-f1c0-d4a5632f27b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 201
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-83041d45d1d9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnested\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'resultSets'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnested\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'resultSets'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'nested' is not defined"
+          ]
+        }
+      ],
       "source": [
         "print(nested[0]['resultSets'])\n",
         "print('\\n')\n",
